# actix-react-starter-template

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  run  test
.github/workflows/: pre-commit.yml  test.yml  update-copyright-years-in-license-file.yml
client/: .babelrc  .eslintrc.json  .stylelintrc.json  README.md  jest.config.js  jest.config.ts  package-lock.json  package.json  tsconfig.json  webpack.config.babel.js  webpack.config.babel.ts  webpack.config.js  webpack.config.ts
client/src/: App.test.tsx  App.tsx  custom.d.ts  global-styles.css  global-styles.scss  main.tsx
client/src/components/: App.test.tsx  App.tsx  index.ts
client/src/components/App/: App.module.css  App.test.tsx  App.tsx
client/src/public/: index.html
server/: handlers.rs  main.rs  routes.rs
src/: main.rs
