[package]
name = "actix-react-starter-template"
version = "0.1.0"
authors = ["Álvaro Mondéjar <mondejar1994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-files = "0.5.0"

[[bin]]
# override default src/main.rs entry point
name = "actix-react-starter-template"
path = "server/main.rs"
