[package]
name = "actix-react-starter-template"
version = "0.1.0"
authors = ["Author Name <authoremail@provider.ext>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-files = "0.5.0"
env_logger = "0.9.0"

[dev-dependencies]
actix-rt = "2.4.0"
cargo-watch = "7.8.1"

[[bin]]
# override default src/main.rs entry point
name = "actix-react-starter-template"
path = "server/main.rs"
