[package]
name = "actix-react-starter-template"
version = "0.2.0"
authors = ["Author Name <authoremail@provider.tld>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-files = "0.6.5"
env_logger = "0.11.2"

[dev-dependencies]
actix-rt = "2.9.0"

[[bin]]
# override default src/main.rs entry point
name = "actix-react-starter-template"
path = "server/main.rs"
